# MitoSplit-Net

./: .gitignore  AUTHORS  LICENSE  README.md  model.ipynb  preprocessing.ipynb  setup.cfg
bioimage/: keras_model.h5  prepare_data.ipynb  rdf.yaml  sample_input.tif  sample_output.tif
cleanup/: Add.csv  Delete.csv  Increase.csv  clean_proc.py
mitosplit-net/: .~evaluation.ipynb  augmentation.ipynb  augmentation.py  evaluation.py  plotting.py  preprocessing.ipynb  preprocessing.py  training.ipynb  util.py
mitosplit-net/.ipynb_checkpoints/: augmentation-checkpoint.ipynb  augmentation-checkpoint.py  evaluation-checkpoint.ipynb  evaluation-checkpoint.py  plotting-checkpoint.py  preprocessing-checkpoint.ipynb  preprocessing-checkpoint.py  training-checkpoint.ipynb  training-checkpoint.py  util-checkpoint.py
mitosplit-net/notebooks/: preprocessing.ipynb  training.ipynb
mitosplit-net/notebooks/.ipynb_checkpoints/: training-checkpoint.ipynb
mitosplit_net/: augmentation.py  compilation.py  evaluation.ipynb  evaluation.py  evaluation_script.py  perf_test.py  plotting.py  preprocessing.ipynb  preprocessing.py  training.ipynb  training.py  training_script.py  util.py
mitosplit_net/.ipynb_checkpoints/: augmentation-checkpoint.ipynb  training-checkpoint.ipynb
mitosplit_net/data/: scores_data_20250103_092111.json  scores_data_20250103_221341.json  scores_data_20250104_210957.json
planning/: MitoSplit-Net_project_master.xlsx  schedule.xlsx
