[metadata]
name = MitoSplit-Net
version = 0.1
author = Santiago N. Rodriguez Alvarez
author_email = santiago.rodriguezalvarez@epfl.ch
description = Detection of mitochondrial divisions with neural networks
long_description = file: README.md
long_description_content_type = text/markdown
keywords = microscopy, image analysis, machine learning
url = https://github.com/LEB-EPFL/MitoSplit-Net
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = mitosplit_net
python_requires = >=3.7
include_package_data = True
